src/assets/header.css
.header_container {
    position: relative;
    width: 99vw;
    max-width: 1440px;
    height: 1133px;
    background: #F3FFFD;
}

.image_block {
    width: 99vw;
    max-width: 1440px;
    height: 842px;
    background: url(../img/headerPhoto.png);
    background-position: center;
}

.filter {
    position: absolute;
    width: 99vw;
    max-width: 1440px;
    height: 842px;
    left: 0px;
    top: 0px;
    background: rgba(0, 0, 0, 0.5);
}

.company_name {
    font-size: 20px;
    color: #F3FFFD;
}

.navigation {
    position: absolute;
    width: 90vw;
    max-width: 1322px;
    height: 91px;
    left: 59px;
    top: 0px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav_block {
    display: grid;
    grid-template-columns: 1fr 2fr 1fr;
    grid-gap: 1rem;
    text-align: center;
}

a {
    text-decoration: none;
    font-size: 20px;
    color: #fff;
}


.nav_block>a {
    overflow: hidden;
    position: relative;
    display: inline-block;
}

.nav_block>a::before,
.nav_block>a::after {
    content: '';
    position: absolute;
    width: 100%;
    left: 0;
}

.nav_block>a::before {
    background-color: #00CCA6;
    height: 2px;
    bottom: 0;
    transform-origin: 100% 50%;
    transform: scaleX(0);
    transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
}

.nav_block>a::after {
    content: attr(data-replace);
    height: 100%;
    top: 0;
    transform-origin: 100% 50%;
    transform: translate3d(200%, 0, 0);
    transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
    color: #00CCA6;
}

.nav_block>a:hover::before {
    transform-origin: 0% 50%;
    transform: scaleX(1);
}

.nav_block>a:hover::after {
    transform: translate3d(0, 0, 0);
}

.nav_block>a span {
    display: inline-block;
    transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
}

.nav_block>a:hover span {
    transform: translate3d(-200%, 0, 0);
}

.achievement_block {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 80px 0px 0px;
    gap: 80px;
    position: absolute;
    width: 99vw;
    max-width: 1046px;
    left: calc(50% - 1046px/2);
    top: 104px;
}

.header_text_block {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0px;
    color: #FFFFFF;
    width: 701px;
    height: 542px;
}

.header_text {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 40px 0px;
    gap: 40px;

    width: 699px;
    height: 542px;
}

.header_text>h1 {
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 300;
    font-size: 63px;
    line-height: 80px;
    text-align: center;
    letter-spacing: 0.2px;
    width: 654px;
}

.header_text>h4 {
    width: 688px;
    height: 90px;
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 30px;
    text-align: center;
    letter-spacing: 0.2px;
}

.btn {
    width: 175px;
    height: 52px;
    background-color: #00CCA6;
    border: none;
    border-radius: 50px;
    color: #FFFFFF;
    font-size: 20px;
    font-weight: 900;
    letter-spacing: 1.5px;
    cursor: pointer;
}

.btn:hover {
    border: 2px solid;
    box-shadow: inset 0 0 10px rgb(246 33 0 / 50%), 0 0 10px rgb(246 33 0 / 50%);
    outline-color: rgba(246, 33, 0, .5);
    outline-offset: 3px;
    text-shadow: 1px 1px 2px #427388;
}

.achievement_section {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0px;
    gap: 30px;
    width: 1046px;
}

.section:last-child {
    background: #00CCA6;
    color: #FFFFFF;
}

.section {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 35px 40px;
    gap: 10px;
    width: 328px;
    height: 200px;
    background: #FFFFFF;
    box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
}

.section>h3 {
    font-weight: 700;
    font-size: 24px;
    line-height: 32px;
    letter-spacing: 0.1px;
}

